2008-04-01  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/: Support adjustable escape char option in
	ipmiconsole.
	
2008-03-28  Albert Chu <chu11@llnl.gov>

	* Fix nroff syntax in many manpages.
	
	* More copyright changes/fixes/updates/header additions
	everywhere.

	* ipmi-oem/: Minor cleanup.

2008-03-27  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Add ipmi-oem command.

	* Tons of copyright changes/fixes/updates/header additions
	everywhere.

2008-03-27  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c: Fix compile bugs.

	* ipmi-raw/src/ipmi-raw-argp.c: Fix error check corner case.
	
2008-03-23  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-text.man,
	common/doc/manpage-common-workaround-text.man,
	doc/freeipmi-bugs-and-workarounds.txt: Add new motherboard for
	asus workarounds.
	
2008-03-19  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_init_ipmi): Fix probing issue.

	* bmc-watchdog/src/bmc-watchdog.c (_cmd): Fix openipmi corner case.
	
2008-03-06  Albert Chu <chu11@llnl.gov>

	* common/doc: Minor updates.

	* doc/freeipmi-bugs-and-workarounds.txt: New doc.
	
2008-02-23  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/: Re-work to avoid excessive IPMI transactions.

2008-02-22  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-util.c: Fix bad return types.

2008-02-22  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/ipmi-fru.8.pre.in: Fix typos.

	* ipmi-fru/src/ipmi-fru-util.c: Fix typo.

	* ipmi-fru/src/ipmi-fru-util.c (_sixbitascii_to_ascii): Fix
	conversion corner cas.
	
2008-02-21  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-text.man: Add forgotten Sun
	Fire 4100 workaround.

	* doc/freeipmi-coding.txt: Add chunk on workarounds implemenation.

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_open_session): Fix sun workaround bug.
	
2008-02-19  Albert Chu <chu11@llnl.gov>

	* common/src/config-commit.c (config_commit_section): Fix bug.
	